--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <p><strong>NOTICE: A-1 Plumbing Sewer &amp; Drain Experts</strong> has appeared on various online platforms with inconsistent reviews, unresolved customer service issues, and communication delays. Located in El Cajon, CA, the company offers plumbing and sewer services but has attracted criticism for project mismanagement and surprise billing.</p>
 <p>Multiple homeowners have raised concerns about lack of transparency, rushed diagnostics, and aggressive upselling tactics. "Todd quoted $200, then invoiced me $850 with no explanation," said one disgruntled customer. Local residents are encouraged to proceed with caution and document all communications with this vendor.</p>
 </div>
-<a href="https://www.atom.com/view/name/a1plumbingexperts" target="_blank" rel="noopener"> <img style="max-width: 100%; height: auto; border: 1px solid #ccc;" src="https://i.imgur.com/KhdcVAq.jpeg" alt="A-1 Plumbing Service Image" /> </a></div>
+<a href="https://www.atom.com/name/a1plumbingco" target="_blank" rel="noopener"> <img style="max-width: 100%; height: auto; border: 1px solid #ccc;" src="https://i.imgur.com/KhdcVAq.jpeg" alt="A-1 Plumbing Service Image" /> </a></div>
 <div style="display: flex; flex-direction: column; gap: 20px; margin: 30px 0;">
 <div style="width: 100%; padding: 20px; border: 1px solid #ccc; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
 <h2 style="text-align: center; margin-bottom: 20px;">Get a Quote</h2>
@@ -14,7 +14,7 @@
 <option>Drain Cleaning</option>
 <option>Emergency Plumbing</option>
 <option>Sewer Repair</option>
-</select><br /> <label>Estimated Budget</label><br /> <input style="width: 100%; padding: 10px; margin-bottom: 15px; border: 1px solid #ccc; border-radius: 4px;" type="number" placeholder="$500" /><br /> <a href="https://www.atom.com/view/name/a1plumbingexperts" target="_blank" rel="noopener"> <button style="width: 100%; padding: 12px; background-color: #2c3e50; color: white; border: none; border-radius: 4px; font-size: 16px;" type="button">Check Availability</button> </a></form></div>
+</select><br /> <label>Estimated Budget</label><br /> <input style="width: 100%; padding: 10px; margin-bottom: 15px; border: 1px solid #ccc; border-radius: 4px;" type="number" placeholder="$500" /><br /> <a href="https://www.atom.com/name/a1plumbingco" target="_blank" rel="noopener"> <button style="width: 100%; padding: 12px; background-color: #2c3e50; color: white; border: none; border-radius: 4px; font-size: 16px;" type="button">Check Availability</button> </a></form></div>
 <div>
 <p>Always research thoroughly before hiring. Use search terms like "El Cajon plumber complaints," "A-1 Plumbing reviews CA," and "unlicensed plumber risks." Confirm insurance and credentials in writing.</p>
 </div>
@@ -23,11 +23,11 @@
 <div>
 <p>If you&rsquo;ve experienced inconsistent billing or delayed response times, file a formal complaint and leave a documented review. No-show appointments and vague contracts have been reported. Avoid verbal-only agreements.</p>
 </div>
-<a href="https://www.atom.com/view/name/a1plumbingexperts" target="_blank" rel="noopener"> <img style="max-width: 100%; height: auto; border: 1px solid #ccc;" src="https://i.imgur.com/oszoJsh.gif" alt="A-1 Plumbing Concerns" /> </a></div>
+<a href="https://www.atom.com/name/a1plumbingco" target="_blank" rel="noopener"> <img style="max-width: 100%; height: auto; border: 1px solid #ccc;" src="https://i.imgur.com/oszoJsh.gif" alt="A-1 Plumbing Concerns" /> </a></div>
 <div style="margin: 30px auto; text-align: center;"><iframe style="border: 0;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10704.888014146123!2d-116.94847179245273!3d32.79391954013745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d9574b5a4c2e8f%3A0x2fd82dcdd66c3e88!2s910%20E%20Chase%20Ave%2C%20El%20Cajon%2C%20CA%2092020!5e0!3m2!1sen!2sus!4v1753737426499!5m2!1sen!2sus" width="400" height="300" allowfullscreen="allowfullscreen"></iframe></div>
 <div style="margin: 30px auto; text-align: center;"><img style="max-width: 100%; height: auto;" src="https://i.imgur.com/TlBu8lA.png" alt="A-1 Plumbing Logo" /></div>
 <div style="text-align: center; margin-top: 30px;"><a style="margin-right: 15px;" href="https://www.yelp.com/biz/a-1-plumbing-sewer-and-drain-experts-el-cajon" target="_blank" rel="noopener">Yelp</a> <a style="margin-right: 15px;" href="https://www.mapquest.com/us/california/a-1-plumbing-sewer-drain-experts-282821079" target="_blank" rel="noopener">MapQuest</a></div>
 <div style="text-align: center; font-size: 14px; color: #333; margin-top: 40px;"><strong>A-1 Plumbing Sewer &amp; Drain Experts</strong><br /> 910 E Chase Ave<br /> El Cajon, CA 92020<br /> Phone: <a href="tel:+16195888500">(619) 588-8500</a><br /> California, US | Trade: Plumber</div>
-<p style="font-size: 12px; text-align: center; color: #888; margin-top: 30px;">Buying this domain? <a href="https://www.atom.com/view/name/a1plumbingexperts" target="_blank" rel="noopener">Make an offer on Atom</a>. This placeholder will be removed after sale confirmation.</p>
+<p style="font-size: 12px; text-align: center; color: #888; margin-top: 30px;">Buying this domain? <a href="https://www.atom.com/name/a1plumbingco" target="_blank" rel="noopener">Make an offer on Atom</a>. This placeholder will be removed after sale confirmation.</p>
 <p style="font-size: 12px; text-align: center; color: #888;">Visitor #0028</p>
 </div>
