--- a/index.html
+++ b/index.html
@@ -31,3 +31,26 @@
 <p style="font-size: 12px; text-align: center; color: #888; margin-top: 30px;">Buying this domain? <a href="https://www.atom.com/name/a1plumbingco" target="_blank" rel="noopener">Make an offer on Atom</a>. This placeholder will be removed after sale confirmation.</p>
 <p style="font-size: 12px; text-align: center; color: #888;">Visitor #0028</p>
 </div>
+<script type="application/ld+json"> 
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "A-1 Plumbing Sewer & Drain Experts",
+  "image": "https://i.imgur.com/KhdcVAq.jpeg",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "910 E Chase Ave",
+    "addressLocality": "El Cajon",
+    "addressRegion": "CA",
+    "postalCode": "92020",
+    "addressCountry": "US"
+  },
+  "telephone": "+1-619-588-8500",
+  "url": "https://www.atom.com/name/a1plumbingco",
+  "sameAs": [
+    "https://www.yelp.com/biz/a-1-plumbing-sewer-and-drain-experts-el-cajon",
+    "https://www.mapquest.com/us/california/a-1-plumbing-sewer-drain-experts-282821079",
+    "https://www.google.com/maps/search/?api=1&query=A-1%20Plumbing%20Sewer%20%26%20Drain%20Experts&query_place_id=ChIJi8MHR6FQ2YARDqeGya57Mz4"
+  ]
+}
+</script>
