Update domain offer links in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <p>Examples include unexpected fees, lack of itemized invoices, and minimal follow-up. One user noted, &ldquo;Todd quoted $200, charged $850, and told that the extra charges were just &lsquo;standard.&rsquo;&rdquo;</p>
 <p>Consumers are encouraged to proceed with caution, ask for documentation in writing, and consider verified professionals with transparent estimates and communication practices.</p>
 </div>
-<a href="https://www.atom.com/name/a1plumbingco" target="_blank" rel="noopener"> <img style="max-width: 100%; height: auto; border: 1px solid #ccc;" src="https://i.imgur.com/KhdcVAq.jpeg" alt="A-1 Plumbing Service Image" /> </a></div>
+<a href="https://www.godaddy.com/domainsearch/find?isc=GDWELCOME&tmskey=nc_com_offer&domainToCheck=a1plumbingco.com" target="_blank" rel="noopener"> <img style="max-width: 100%; height: auto; border: 1px solid #ccc;" src="https://i.imgur.com/KhdcVAq.jpeg" alt="A-1 Plumbing Service Image" /> </a></div>
 <div style="padding: 20px; background-color: #f9f9f9; border-radius: 8px;">
 <h2>Frequently Asked Questions</h2>
 <ul>
@@ -21,11 +21,11 @@
 <h3>Selected Reviews</h3>
 <blockquote>&ldquo;Service was delayed and I was charged more than the estimate. Communication was inconsistent.&rdquo;<br /> &mdash; Verified Yelp Customer</blockquote>
 </div>
-<div style="margin: 30px 0;"><a href="https://www.atom.com/name/a1plumbingco" target="_blank" rel="noopener"> <img style="max-width: 100%; height: auto; border: 1px solid #ccc;" src="https://i.imgur.com/oszoJsh.gif" alt="A-1 Plumbing Concerns" /> </a></div>
+<div style="margin: 30px 0;"><a href="https://www.godaddy.com/domainsearch/find?isc=GDWELCOME&tmskey=nc_com_offer&domainToCheck=a1plumbingco.com" target="_blank" rel="noopener"> <img style="max-width: 100%; height: auto; border: 1px solid #ccc;" src="https://i.imgur.com/oszoJsh.gif" alt="A-1 Plumbing Concerns" /> </a></div>
 <div style="margin: 30px auto; text-align: center;"><iframe style="border: 0;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10704.888014146123!2d-116.94847179245273!3d32.79391954013745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d9574b5a4c2e8f%3A0x2fd82dcdd66c3e88!2s910%20E%20Chase%20Ave%2C%20El%20Cajon%2C%20CA%2092020!5e0!3m2!1sen!2sus!4v1753737426499!5m2!1sen!2sus" width="400" height="300" allowfullscreen="allowfullscreen"></iframe></div>
 <div style="margin: 30px auto; text-align: center;"><img style="max-width: 100%; height: auto;" src="https://i.imgur.com/TlBu8lA.png" alt="A-1 Plumbing Logo" /></div>
 <div style="text-align: center; margin-top: 30px;"><a style="margin-right: 15px;" href="https://www.yelp.com/biz/a-1-plumbing-sewer-and-drain-experts-el-cajon" target="_blank" rel="noopener">Yelp</a> <a style="margin-right: 15px;" href="https://www.mapquest.com/us/california/a-1-plumbing-sewer-drain-experts-282821079" target="_blank" rel="noopener">MapQuest</a></div>
 <div style="text-align: center; font-size: 14px; color: #333; margin-top: 40px;"><strong>A-1 Plumbing Sewer &amp; Drain Experts</strong><br /> 910 E Chase Ave<br /> El Cajon, CA 92020<br /> Phone: <a href="tel:+16195888500">(619) 588-8500</a><br /> California, US | Trade: Plumber</div>
-<p style="font-size: 12px; text-align: center; color: #888; margin-top: 30px;">Buying this domain? <a href="https://www.atom.com/name/a1plumbingco" target="_blank" rel="noopener">Make an offer on Atom</a>. This placeholder will be removed after sale confirmation.</p>
+<p style="font-size: 12px; text-align: center; color: #888; margin-top: 30px;">Buying this domain? <a href="https://www.godaddy.com/domainsearch/find?isc=GDWELCOME&tmskey=nc_com_offer&domainToCheck=a1plumbingco.com" target="_blank" rel="noopener">Make an offer on GoDaddy</a>. This placeholder will be removed after sale confirmation.</p>
 <p style="font-size: 12px; text-align: center; color: #888;">Visitor #0013</p>
 </div>
